OpenSTA Timing Analyzer Release Notes
-------------------------------------

This file summarizes user visible changes for each release.

Release 2.6.0 2024/07/??
-------------------------

The version of c++ used by OpenSTA is now 17.

The USE_CUDD and USE_TCL_READLINE options default to ON.

Release 2.5.0 2024/01/17
-------------------------

The report_net -connections, -verbose and -hier_pins flags are deprecated.
The report_instance -connections and -verbose flags are deprecated.
The options are now enabled in all cases.

The read_spef parasitic reduction arguments have changed. The
-reduce_to and -delete_after_reduce arguments are deprecated and
replaced with the -reduce flag. With the -reduce flag, the current
delay calculator reduces the parastic network to the appropriate type
and deletes the parasitic network.

The report_clock_skew and report_clock_latency commands now supports
the -include_internal_latency flag to control inclusion of macro
internal clock delays from the cell liberty min/max_clock_tree_path
timing groups.

  report_clock_skew -include_internal_latency
  report_clock_latency -include_internal_latency

The all_inputs command now supports the -no_clocks argument to exclude
clocks from the list.

  all_inputs [-no_clocks]

Release 2.4.0 2023/01/19
-------------------------

The report_parasitics_annotation command reports SPEF annotation completeness.

  report_parasitics_annotation [-report_unannotated]

The read_power_activities command reads a verilog vcd file and extracts
pin activities for power analysis.

  read_power_activities -vcd filename

The report_cell command has been removed; use report_instance.

The read_liberty command latch inference (see OpenSTA.pdf) is now disabled by default.
The -no_latch_infer flag is deprecated.
To enable latch inference, use the -infer_latches flag.

The report fanout and capacitance fields are now shown on output pin lines rather
than net lines.

Release 2.3.3 2022/09/24
-------------------------
