@@ -18,15 +18,9 @@
 
 #include <map>
 
+#include "cudd.h"
 #include "StaState.hh"
 #include "LibertyClass.hh"
-
-#if CUDD
-#include "cudd.h"
-#else
-struct DdNode;
-struct DdManager;
-#endif
 
 namespace sta {
 
