@@ -4,8 +4,6 @@
 
 #cmakedefine ZLIB_FOUND
 
-#define CUDD ${CUDD}
-
 #define SSTA ${SSTA}
 
 #define TCL_READLINE ${TCL_READLINE}
